fix vertical alignment of mneu in md and above

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -637,13 +637,9 @@ html {
     ul {
       font-size: 0.8rem;
 
-      li {
-        margin-bottom: 9px;
-      }
       a {
         background-color: inherit;
         padding: 0;
-        margin-bottom: 10px;
       }
     }
 
